template/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: springboot-hello-world
  name: springboot-hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-hello-world
  template:
    metadata:
      labels:
        app: springboot-hello-world
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/hello-tekton-buildah-demo/springboot-hello-world:latest
        imagePullPolicy: Always
        name: springboot-hello-world
        ports:
        - containerPort: 8080
          protocol: TCP
