template/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pipeline-hello-world
  name: pipeline-hello-world
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: pipeline-hello-world
