template/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: springboot-hello-world
  name: springboot-hello-world
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: springboot-hello-world
    weight: 100
